unpackaged/main/default/objects/VoiceCall/VoiceCall.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>