unpackaged/main/default/objects/VoiceCall/fields/After_Call_Work_Duration__c.field-meta.xml
<CustomField>
    <fullName>After_Call_Work_Duration__c</fullName>
    <label>After Call Work Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>