unpackaged/main/default/objects/VoiceCall/fields/Agent_Hold_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agent_Hold_Duration__c</fullName>
    <description>Duration for which agent kept the call on hold.</description>
    <label>Agent Hold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>