unpackaged/main/default/objects/VoiceCall/fields/Flow_Complete__c.field-meta.xml
<CustomField>
    <fullName>Flow_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Complete?</label>
    <type>Checkbox</type>
</CustomField>