unpackaged/main/default/objects/VoiceCall/fields/NF_Account__c.field-meta.xml
<CustomField>
    <fullName>NF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>