unpackaged/main/default/objects/VoiceCall/fields/NF_ACW_End__c.field-meta.xml
<CustomField>
    <fullName>NF_ACW_End__c</fullName>
    <description>Exact time when agents have finished adding notes to the case record and determined case resolution post call.</description>
    <label>ACW End</label>
    <type>DateTime</type>
</CustomField>