unpackaged/main/default/objects/VoiceCall/fields/NF_ACW_Start__c.field-meta.xml
<CustomField>
    <fullName>NF_ACW_Start__c</fullName>
    <description>Exact time when agents start After Call Work, adding notes to the case record and determining case resolution post call.</description>
    <label>ACW Start</label>
    <type>DateTime</type>
</CustomField>