unpackaged/main/default/objects/VoiceCall/fields/NF_ACWDuration__c.field-meta.xml
<CustomField>
    <fullName>NF_ACWDuration__c</fullName>
    <description>Total time of After Call Work, when agents finish adding notes to the case record and determine case resolution post call.</description>
    <label>ACWDuration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>