unpackaged/main/default/objects/VoiceCall/fields/NF_Agent_Connection_Attempts__c.field-meta.xml
<CustomField>
    <fullName>NF_Agent_Connection_Attempts__c</fullName>
    <description>Number of attempts made to connect with the Agent</description>
    <label>Agent Connection Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>