unpackaged/main/default/objects/VoiceCall/fields/NF_Agent_Interaction_Duration__c.field-meta.xml
<CustomField>
    <fullName>NF_Agent_Interaction_Duration__c</fullName>
    <description>Amount of time spent with contact over call excluding hold time</description>
    <label>Agent Interaction Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>