unpackaged/main/default/objects/VoiceCall/fields/NF_Call_Abandoned_in_IVR__c.field-meta.xml
<CustomField>
    <fullName>NF_Call_Abandoned_in_IVR__c</fullName>
    <formula>IF(ISBLANK( CallQueuedDateTime ), 1, 0)</formula>
    <label>Call Abandoned in IVR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>