unpackaged/main/default/objects/VoiceCall/fields/NF_Call_Abandoned_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>NF_Call_Abandoned_in_Queue__c</fullName>
    <description>If a call is abandoned in queue then 1, otherwise 0.</description>
    <formula>IF(ISBLANK(CallAcceptDateTime), 1, 0)</formula>
    <label>Call Abandoned in Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>