unpackaged/main/default/objects/VoiceCall/fields/NF_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>NF_Case_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the case number of the case that has been associated with this call.</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>