unpackaged/main/default/objects/VoiceCall/fields/NF_Case_Resolved__c.field-meta.xml
<CustomField>
    <fullName>NF_Case_Resolved__c</fullName>
    <description>=1 if the case related to this call had a status of Closed ... proxy for FCR</description>
    <formula>if (   NF_Case_Status__c  ="Solved", 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counter for Closed Cases (current Status) for case related to this call.</inlineHelpText>
    <label>Case Resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>