unpackaged/main/default/objects/VoiceCall/fields/NF_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>NF_Case_Status__c</fullName>
    <description>This is the current status from the case record associated with this call.</description>
    <formula>text(  NF_Case_Number__r.Status  )</formula>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>