unpackaged/main/default/objects/VoiceCall/fields/NF_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>NF_Case_Type__c</fullName>
    <description>This field is completed when the case is associated with the voice call, based on the information we know at that time.  It can be completed programmatically, or manually by the agent.</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Case</fullName>
            </value>
            <value>
                <fullName>Existing Open Case</fullName>
            </value>
            <value>
                <fullName>Existing Closed Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>