unpackaged/main/default/objects/VoiceCall/fields/NF_Channel__c.field-meta.xml
<CustomField>
    <fullName>NF_Channel__c</fullName>
    <description>Call Medium (Applicable values - "VOICE" and "CHAT")</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>