unpackaged/main/default/objects/VoiceCall/fields/NF_Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>NF_Disconnect_Reason__c</fullName>
    <description>Reason for call being disconnected</description>
    <label>Disconnect Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>