unpackaged/main/default/objects/VoiceCall/fields/NF_IVR_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>NF_IVR_Completion_Time__c</fullName>
    <label>IVR Completion Time</label>
    <type>DateTime</type>
</CustomField>