unpackaged/main/default/objects/VoiceCall/fields/NF_IVR_Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>NF_IVR_Entry_Time__c</fullName>
    <label>IVR Entry Time</label>
    <type>DateTime</type>
</CustomField>