unpackaged/main/default/objects/VoiceCall/fields/NF_IVRDuration__c.field-meta.xml
<CustomField>
    <fullName>NF_IVRDuration__c</fullName>
    <formula>((NF_IVR_Completion_Time__c -  NF_IVR_Entry_Time__c) * 1440 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVRDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>