unpackaged/main/default/objects/VoiceCall/fields/NF_Lead__c.field-meta.xml
<CustomField>
    <fullName>NF_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NF Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>