unpackaged/main/default/objects/VoiceCall/fields/NF_Queue__c.field-meta.xml
<CustomField>
    <fullName>NF_Queue__c</fullName>
    <description>Used to populate Queue in advance of what the standard SCV/Connect set-up allows for.  So that callers know the Queue prior to answering the call.</description>
    <label>Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>