unpackaged/main/default/objects/VoiceCall/fields/NF_Queue_Duration__c.field-meta.xml
<CustomField>
    <fullName>NF_Queue_Duration__c</fullName>
    <description>Time spent in Queue by a contact</description>
    <label>Queue Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>