unpackaged/main/default/objects/VoiceCall/fields/NF_Queue_Exit_Time__c.field-meta.xml
<CustomField>
    <fullName>NF_Queue_Exit_Time__c</fullName>
    <description>Time when contact exited the queue</description>
    <label>Queue Exit Time</label>
    <type>DateTime</type>
</CustomField>