unpackaged/main/default/objects/VoiceCall/fields/NF_Retry_Sync_Complete__c.field-meta.xml
<CustomField>
    <fullName>NF_Retry_Sync_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the retry sync is complete</description>
    <label>Retry Sync Complete</label>
    <type>Checkbox</type>
</CustomField>