unpackaged/main/default/objects/VoiceCall/fields/NF_Routing_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>NF_Routing_Profile_Name__c</fullName>
    <description>Name of the Routing Profile associated with the agent</description>
    <label>Routing Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>