unpackaged/main/default/objects/VoiceCall/fields/NF_Seconds_to_IVR_Abandon__c.field-meta.xml
<CustomField>
    <fullName>NF_Seconds_to_IVR_Abandon__c</fullName>
    <formula>IF(CallEndDateTime &lt; CallQueuedDateTime, (NF_IVRDuration__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seconds to IVR Abandon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>