unpackaged/main/default/objects/VoiceCall/fields/NF_Time_to_Abandon__c.field-meta.xml
<CustomField>
    <fullName>NF_Time_to_Abandon__c</fullName>
    <description>Time in queue prior to abandoning (sec), 0 if call is connected.</description>
    <formula>IF( ISNULL(CallAcceptDateTime), 0, ( NF_Queue_Duration__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Abandon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>