unpackaged/main/default/objects/VoiceCall/fields/Post_Call_Survey_Opted__c.field-meta.xml
<CustomField>
    <fullName>Post_Call_Survey_Opted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notifies if the survey is opted for the call</description>
    <label>Post Call Survey Opted?</label>
    <type>Checkbox</type>
</CustomField>