unpackaged/main/default/objects/VoiceCall/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that a Voicemail has been listened to and responded accordingly.</description>
    <inlineHelpText>Identifies that a Voicemail has been listened to and responded accordingly.</inlineHelpText>
    <label>Reviewed?</label>
    <type>Checkbox</type>
</CustomField>