unpackaged/main/default/objects/VoiceCall/fields/Voicemail_DID_Owner__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_DID_Owner__c</fullName>
    <description>Used to identify who a Voicemail was left for</description>
    <label>Voicemail DID Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>