unpackaged/main/default/objects/VoiceCall/listViews/All_Agent_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>All_Agent_Voice_Calls</fullName>
    <columns>CallStartDateTime</columns>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallResolution</columns>
    <columns>Owner</columns>
    <columns>VendorCallKey</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner</field>
        <operation>notContain</operation>
        <value>autoproc</value>
    </filters>
    <label>All Agent Voice Calls</label>
    <sharedTo>
        <group>XOMCPC</group>
        <group>XOMCPC2</group>
    </sharedTo>
</ListView>