unpackaged/main/default/objects/VoiceCall/listViews/Capabilities_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Capabilities_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Capabilities</label>
    <queue>Capabilities</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>