unpackaged/main/default/objects/VoiceCall/listViews/CPC_CPC_Full_Team_Voicemail_List_View.listView-meta.xml
<ListView>
    <fullName>CPC_CPC_Full_Team_Voicemail_List_View</fullName>
    <columns>CallStartDateTime</columns>
    <columns>Name</columns>
    <columns>Voicemail_DID_Owner__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallOrigin</columns>
    <columns>Owner</columns>
    <columns>Reviewed__c</columns>
    <columns>NF_Case_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallOrigin</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Reviewed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>[CPC]  CPC Full Team Voicemail List View</label>
    <sharedTo>
        <group>XOMCPC</group>
        <group>XOMCPC2</group>
        <role>CPC_Leadership</role>
        <role>CPC_PO</role>
        <role>CPC_QA</role>
    </sharedTo>
</ListView>