unpackaged/main/default/objects/VoiceCall/listViews/My_Voicemails_Clone_Me.listView-meta.xml
<ListView>
    <fullName>My_Voicemails_Clone_Me</fullName>
    <columns>CallStartDateTime</columns>
    <columns>Name</columns>
    <columns>Voicemail_DID_Owner__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallOrigin</columns>
    <columns>Owner</columns>
    <columns>Reviewed__c</columns>
    <columns>NF_Case_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallOrigin</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Reviewed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Voicemail_DID_Owner__c</field>
        <operation>equals</operation>
        <value>Nakisha Simms</value>
    </filters>
    <label>My Voicemails - Clone Me</label>
    <sharedTo>
        <group>XOMCPC</group>
        <group>XOMCPC2</group>
    </sharedTo>
</ListView>