unpackaged/main/default/objects/VoiceCall/listViews/Order_Status_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Order_Status_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Order Status</label>
    <queue>Order_Status</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>