unpackaged/main/default/objects/VoiceCall/listViews/Other_Inquiries_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Other_Inquiries_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Other Inquiries</label>
    <queue>Other_Inquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>