unpackaged/main/default/objects/VoiceCall/listViews/Partner_Job_Support_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Partner_Job_Support_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Job Support</label>
    <queue>Partner_Job_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>