unpackaged/main/default/objects/VoiceCall/listViews/Partner_Other_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Partner_Other_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Other</label>
    <queue>Partner_Other</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>