unpackaged/main/default/objects/VoiceCall/listViews/Partner_Shipping_Labels_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Partner_Shipping_Labels_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Shipping Labels</label>
    <queue>Partner_Shipping_Labels</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>