unpackaged/main/default/objects/VoiceCall/listViews/Payment_and_Invoices_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Payment_and_Invoices_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Payment and Invoices</label>
    <queue>Payment_and_Invoices</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>