unpackaged/main/default/objects/VoiceCall/listViews/Quote_Questions_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Quote_Questions_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Quote Questions</label>
    <queue>Quote_Questions</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>