unpackaged/main/default/objects/VoiceCall/listViews/SCV_BASIC_QUEUE_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_BASIC_QUEUE_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV Basic Queue</label>
    <queue>SCV_BASIC_QUEUE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>